--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                     type="button"
                     aria-label="Показать случайный факт про Амстердам, траву и трюфели"
             >
-                Дай факт про Амстердам 📚
+                Обнови факт 📚
             </button>
             <div class="fact-card" id="factCard">
                 <div class="fact-label">подсказка перед поездкой</div>
@@ -669,26 +669,26 @@
 
     // === Факты про Амстердам, каннабис и трюфели ===
     const FACTS = [
-        'Первый амстердамский кофешоп Mellow Yellow открылся в 1972 году в бывшей булочной, захваченной хиппи. Он стал одним из первых мест в мире, где траву продавали почти открыто.',
-        'Система кофешопов родилась как компромисс: государство хотело отделить мягкие наркотики от тяжёлых и вытащить курильщиков из подполья к контролируемым местам.',
-        'По национальным правилам кофешоп не имеет права продать тебе больше 5 граммов за раз — всё, что выше, уже не считается «личным пользованием».',
-        'У кофешопов есть знаменитая «проблема чёрного входа»: им разрешено продавать каннабис, но официальный и полностью легальный оптовый закуп до сих пор не прописан в законе.',
-        'Mellow Yellow закрыли в 2017-м из-за правила «250 метров от школы» — так Амстердам договорился с Гаагой, чтобы избежать жёсткого запрета на иностранцев в кофешопах.',
-        'В центре Амстердама (ред-лайт, Дам и Дамрак) нельзя курить траву на улице: сначала предупреждение, потом штраф около 100 евро, если продолжаешь.',
-        'Запрет на курение на улице не распространяется на террасы кофешопов: формально сидеть с джойнтом можно только на лицензированной площадке, а не просто в толпе.',
-        'Мэр Амстердама несколько раз предлагала запретить продажу травы туристам — город устал от «наркотуризма» и хочет, чтобы люди приезжали ещё и за культурой.',
-        'Город запускал кампанию Stay Away и онлайн-квиз для «токсичных» туристов: с вопросами в духе «ты сюда за музеями или только за сплифом и бархоппингом?».',
-        'До 2008 года в смартшопах свободно продавались обычные «магические грибы», но после нескольких резонансных случаев их запретили и оставили только трюфели.',
-        'Магические трюфели — это подземные скопления мицелия (склероции). Закон формально отделил их от грибов, поэтому после запрета грибов трюфели внезапно стали отдельной легальной индустрией.',
-        'Смартшопы в Нидерландах — это не только трюфели: там продают тест-киты для веществ, витамины, книги и всякий другой хардкорный harm-reduction-инвентарь для рейверов.',
-        'Нидерланды были одними из первых, кто начал проверять вещества для клубной сцены: национальная система DIMS работает с начала 1990-х и анонимно тестирует образцы, чтобы вовремя ловить особенно опасные партии.',
-        'В Амстердаме есть сервисы вроде Jellinek и GGD, где можно анонимно протестировать таблетки и порошки и параллельно получить лекцию про риски от людей, которые этим занимаются профессионально.',
-        'Взрослому человеку в Нидерландах официально «терпят» до 5 граммов каннабиса или несколько кустов: максимум заберут и выкинут, но не сделают из тебя тяжёлого преступника.',
-        'Кофешопы живут по набору жёстких правил: нельзя рекламировать траву, пускать несовершеннолетних, продавать тяжёлые наркотики, создавать шум или держать большие запасы на складе.',
-        'Разделение на «мягкие» и «твёрдые» наркотики — не просто слова: вся странная голландская система построена на том, чтобы мягкое контролировать и снижать вред, а тяжёлое по-прежнему пресекать по полной.',
-        'Амстердамские врачи и скорые регулярно имеют дело с туристами, которые переборщили с каннабисом — особенно с едой вроде spacecake, где эффект приходит поздно и бьёт гораздо сильнее, чем ожидалось.',
-        'Из-за сильных сортов и плотной городской застройки полиция периодически жалуется на случаи, когда люди под веществами падают с балконов или в каналы — местные к этому относятся очень серьёзно.',
-        'Сами амстердамцы всё громче ругаются на овертуризм: жители уже даже подают коллективные иски к городу, чтобы ограничить поток туристов и не превращать центр в вечную тусовку ради дешёвой травы и алкоголя.'
+        'Первый кофешоп Mellow Yellow открылся в 1972 году в бывшей булочной, где тусовались хиппи. Там траву начали продавать почти открыто задолго до легалайза в других странах.',
+        'Кофешопы появились как компромисс: государство хотело отделить мягкие наркотики от тяжёлых и убрать курильщиков из подполья в контролируемые места.',
+        'По национальным правилам кофешоп не может продать больше 5 граммов за раз — всё выше этого уже не считается «для себя».',
+        'У кофешопов есть «проблема чёрного входа»: продавать им можно, а вот официально закупать оптом — до сих пор юридический цирк.',
+        'Mellow Yellow закрыли в 2017-м из-за правила «250 метров от школы» — так Амстердам договорился с правительством, чтобы не банить туристов в кофешопах совсем.',
+        'В центре Амстердама (ред-лайт, Дам, Дамрак) курить траву на улице нельзя: сначала предупреждение, потом штраф около 100 евро, если продолжаешь.',
+        'Запрет на улицу не касается террас кофешопов: там с джойнтом можно сидеть легально, потому что это лицензированная площадка, а не просто тротуар.',
+        'Мэр Амстердама несколько раз предлагала запретить продажу травы туристам — город устал от людей, которые приезжают только «накуриться и упасть».',
+        'Город запускал кампанию Stay Away с онлайн-квизом для токсичных туристов: проверка «ты сюда за музеями или чисто за сплифом и бархоппингом?».',
+        'До 2008 года в смартшопах спокойно продавали обычные «магические грибы», но после нескольких жёстких случаев их запретили и оставили только трюфели.',
+        'Магические трюфели — это подземные комочки мицелия. Закон формально отделил их от грибов, поэтому после запрета грибов трюфели внезапно стали легальной нишей.',
+        'Смартшопы — это не только трюфели. Там продают тест-киты для веществ, витамины, книги и кучу harm-reduction-штуковин для рейверов и любителей техно.',
+        'Нидерланды одними из первых начали системно проверять вещества для клубной сцены: национальная сеть DIMS с 90-х анонимно тестирует порошки и таблетки.',
+        'В Амстердаме есть сервисы вроде Jellinek и GGD, где можно анонимно протестировать вещества и параллельно получить человеческое объяснение про риски.',
+        'Взрослому человеку «терпят» до 5 граммов каннабиса или пару кустов дома: максимум заберут и выкинут, но из тебя не сделают наркобарона.',
+        'Кофешопы живут по жёстким правилам: никакой рекламы, никаких несовершеннолетних, никаких тяжёлых наркотиков и никаких складов на полтонны.',
+        'Разделение на «мягкие» и «твёрдые» наркотики — не мем, а основа системы: мягкое стараются контролировать и снижать вред, тяжёлое — пресекают по полной.',
+        'Местные врачи и скорые регулярно разгребают туристов, переборщивших со spacecake: еда с каннабисом бьёт медленнее, но часто сильнее, чем люди ожидают.',
+        'Из-за мощных сортов и узких улиц полиция периодически получает кейсы, где людей под веществами снимают с балконов или вытаскивают из каналов.',
+        'Сами амстердамцы всё громче жалуются на овертуризм: жильцы уже подают коллективные иски, чтобы центр не превращался в вечную тусовку ради дешёвой травы и бухла.'
     ];
 
     const factBtn = document.getElementById('factBtn');
