--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             }
             75% {
                 transform: translateX(2px)
-            }
+            }add Google Maps link for hostel location
         }
 
         /* Respect prefers-reduced-motion: disable “extra” animations */
@@ -700,12 +700,27 @@
 
     // === Факты о правилах и безопасности ===
     const FACTS = [
-        'В старом центре/Red Light District нельзя курить каннабис на улице — штраф около €100. Курить можно внутри и на террасах кофешопов. 🚭',
+        // --- правила и базовые вещи
+        'В старом центре/Red Light District нельзя курить каннабис на улице — штраф около €100. Курить можно внутри и на террасе кофешопов. 🚭',
         'Кофешоп продаст не больше 5 г за раз одному человеку. Реклама каннабиса запрещена. ⚖️',
         'Кофешопы не продают алкоголь, а бары не продают каннабис — разделение строгое. 🚫🍻',
         'Spacecake действует медленно (до часа) и может накрыть сильнее, чем джойнт — начинай с малого. 🍰🔥',
+
+        // --- пиво и бары
         'Heineken Experience — музей-брю-туры в исторической пивоварне в центре Амстердама. 🍺',
         'Пиво Amstel названо в честь реки Амстел, от которой пошёл и Амстердам. 🌊',
+        'Brand — старейшая пивоварня Нидерландов (с 1340 года). Их лагер считают “пивом дедов”. 🍻',
+        'La Trappe — единственное траппистское пиво Нидерландов, варится монахами в монастыре под Тилбургом. ⛪🍺',
+        'Brouwerij ’t IJ варит крафт под ветряком в центре Амстердама — уютное место для дегустации. 🌾',
+        'Голландцы пьют пиво из маленьких стаканов по 0.25 л (“vaasje”) — чтобы всегда было холодным. ❄️',
+        'В барах часто подают “bitterballen” — жареные мясные шарики, идеальная закуска под пиво. 🍢',
+        'Голландцы не любят быстро пить: у них философия “drink less, taste more”. 🧘‍♂️',
+        'Jenever — крепкий предок джина. Его традиционно пьют охлаждённым, с глотка, не поднимая бокал. 🥃',
+        'В Нидерландах всё ещё популярно “bier + jenever” — комбо, где пиво запивают глотком джина. 🌀🍺',
+        'Если бармен наливает пиво с “пеной по краю”, не ругайся — это знак правильной подачи. 🍻',
+        'Icebar — бар изо льда: стены, стойка и даже бокалы. ❄️🍸',
+
+        // --- каннабис, культура и советы
         'Дома терпят до 5 г и (формально незаконные) до 5 растений — могут изъять, но обычно без уголовки. 🏠🌿',
         '«Грибы» запрещены с 2008 года, но магические трюфели (sclerotia) легальны и продаются в smartshop. 🧠',
         'В городе ~165 кофешопов — много, но все по лицензии и правилам. 🌿',
@@ -713,20 +728,24 @@
         'Если переборщил со spacecake — сядь, вода, перекус и время. Паника пройдёт. 💧',
         'Полиция обычно спокойна, если ты вежлив и не мешаешь другим. 🤝',
         'Многие кофешопы закрываются около полуночи–01:00 — планируй заранее. 🌙',
-        'В центре распивать алкоголь на улице нельзя — пей внутри или на террасе. 🚷🥂',
-        'Возраст для алкоголя — 18+. Паспорт могут спросить и в баре, и в кофешопе. 🪪',
-        'Сыр + пиво + лёгкий кайф = неофициальный амстердамский триатлон. 🧀🍺🌿',
         'Многие прероллы — с табаком. Проси “pure”, и помни: табак внутри помещений запрещён. 🚬❌',
         'Можно попросить сорта с низким THC или CBD-доминантные — мягче и без паранойи. 😌',
-        'Голландский jenever — «дедушка джина», крепкий и ароматный. 🥃',
-        'Есть бары с пивом 10%+ — вкусно, но хитро для следующего утра. 😵‍🍺',
-        'Icebar — бар изо льда: стены, стойка и даже бокалы. ❄️🍸',
-        'В центре лучше не скручивать и не курить на улице — выглядит как public use и грозит штрафом. 🚨',
-        'Каналы, кофе и лёгкий чилл — формула идеальных выходных. ☕🌿🚲',
+        'Сорта типа “Sativa” бодрят и подходят для прогулки, “Indica” расслабляет и зовёт в кровать. 🌞🌙',
+        'Spacecake лучше делить на двоих — никто не жалеет об этом решении. 🍰😉',
+        'Если не хочешь сильного эффекта, попробуй vaporizer вместо джойнта — мягче и чище. 💨',
+        'Не кури всё за раз: пары затяжек часто достаточно. Потом добавишь. 🌿🫠',
         'Кофешопы дальше от центра обычно спокойнее и иногда дешевле. 🏙️',
         'Некоторые кофешопы принимают только наличные — проверь заранее. 💶',
         'Свобода тут работает, если уважаешь правила — тогда отдых пройдёт гладко. ✅',
-        'Антидот от паранойи: прогулка вдоль каналов и свежий stroopwafel. 🧇🌉'
+        'Антидот от паранойи: прогулка вдоль каналов и свежий stroopwafel. 🧇🌉',
+        'Каналы, кофе и лёгкий чилл — формула идеальных выходных. ☕🌿🚲',
+
+        // --- дополнительно о культуре
+        'В центре распивать алкоголь на улице нельзя — пей внутри или на террасе. 🚷🥂',
+        'Возраст для алкоголя — 18+. Паспорт могут спросить и в баре, и в кофешопе. 🪪',
+        'Сыр + пиво + лёгкий кайф = неофициальный амстердамский триатлон. 🧀🍺🌿',
+        'В центре лучше не скручивать и не курить на улице — выглядит как public use и грозит штрафом. 🚨',
+        'Голландцы очень пунктуальны: если бронировал дегустацию, не опаздывай — тур начнётся без тебя. ⏰'
     ];
 
     const factBtn = document.getElementById('factBtn');
