--- a/index.html
+++ b/index.html
@@ -579,11 +579,15 @@
     const dec = document.getElementById('decBtn');
 
     const funnyLines = [
-        'Самоконтроль на месте 🧘',
-        'Минус грамм — плюс ясности ✨',
-        'План гибкий, ты — главный 😉',
-        'Организм скажет спасибо 😌',
-        'В темпе, но без перегибов 💚'
+        'Красавчик — минус лишнее 🧘',
+        'Яснее голова — приятнее день ✨',
+        'Темп держим, перегибов нет 💚',
+        'Чуть меньше — чуть спокойнее 😌',
+        'Лучше недобрать, чем перебрать 😉',
+        'Минус грамм — плюс контроль ✅',
+        'Тело скажет спасибо позже 🙌',
+        'Силы на музеи и каналы остались 🚲',
+        'Сегодня бережно — завтра бодро 🌞'
     ];
 
     function readFromStorage() {
